PPL-Sources/PPL-FE/src/test/resources/CoCos/Valid/NoINDEXAsVariable.par
NoINDEXAsVariable {



seq main() : Void {

    var Int index = 0
    var Int INDex = 1
}
}