PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/FunctionReturnTypeExists.par
FunctionReturnTypeExists {
var Int test = 0
seq add(Int input) : Int res{
    return input + 1
}
seq main() : Void {
    test = add(1)

}
}